--- a/src/app/views/dashboard/dashboard-views/dashboard-question/create-question/content/content.component.html
+++ b/src/app/views/dashboard/dashboard-views/dashboard-question/create-question/content/content.component.html
@@ -1,1 +1,7 @@
-<p>Implementar ckeditor</p>
+<div class="wrapper">
+  <p>Implementar ckeditor</p>
+  <div class="action">
+    <button mat-stroked-button color="primary" matStepperPrevious>Volver atrás</button>
+    <button mat-flat-button color="primary" matStepperNext>Continuar</button>
+  </div>
+</div>
