--- a/src/assets/sass/base.scss
+++ b/src/assets/sass/base.scss
@@ -37,7 +37,11 @@ h3 {
   font-weight: 400;
   margin: 16px 0;
 }
-
+h4 {
+  font-size: 24px;
+  font-weight: 400;
+  margin: 0;
+}
 .container {
   width: 100%;
   padding: 0 15px;
