fixed endpoint urls

--- a/src/app/views/dashboard/dashboard-views/dashboard-categories/select-icon/select-icon.component.html
+++ b/src/app/views/dashboard/dashboard-views/dashboard-categories/select-icon/select-icon.component.html
@@ -14,7 +14,7 @@
         </mat-panel-description>
       </mat-expansion-panel-header>
       <ng-container *ngFor="let iconSocial of iconsSocial">
-        <button mat-icon-button>
+        <button>
           <mat-icon fontSet="material-icons-outlined" color="primary">{{
             iconSocial.name
           }}</mat-icon>
