--- a/src/app/views/dashboard/dashboard-views/dashboard-categories/select-icon/select-icon.component.scss
+++ b/src/app/views/dashboard/dashboard-views/dashboard-categories/select-icon/select-icon.component.scss
@@ -5,10 +5,27 @@
     justify-content: space-between;
     align-items: center;
     mat-icon {
-      font-size: 18px;
       cursor: pointer;
     }
   }
+
+  button {
+    outline: none;
+    background: none;
+    border: none;
+    cursor: pointer;
+    mat-icon {
+      width: 45px;
+      height: 45px;
+      padding: 5px;
+      font-size: 40px;
+    }
+    :hover {
+      background-color: rgba(0, 0, 0, 0.04);
+      border-radius: 50%;
+    }
+  }
+
   p {
     font-size: 14px;
   }
