--- a/src/app/views/dashboard/dashboard-views/dashboard-synonyms/table/table-synonyms.component.html
+++ b/src/app/views/dashboard/dashboard-views/dashboard-synonyms/table/table-synonyms.component.html
@@ -2,11 +2,11 @@
   <div class="wrapper">
     <table mat-table [dataSource]="dataSource">
       <ng-container matColumnDef="position">
-        <th width="30%" mat-header-cell *matHeaderCellDef>Categoría</th>
+        <th width="30%" mat-header-cell *matHeaderCellDef>Origen</th>
         <td mat-cell *matCellDef="let element" class="text-blue">{{ element.word }}</td>
       </ng-container>
       <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef>Subcategorías</th>
+        <th mat-header-cell *matHeaderCellDef>Sinónimo(s)</th>
         <td mat-cell *matCellDef="let element">
           <bdc-bo-scroll-synonyms
             *ngIf="element.synonyms"
