--- a/src/app/views/dashboard/dashboard-views/dashboard-question/create-question/metadata-question/dialog-create-category/dialog-create-category.component.scss
+++ b/src/app/views/dashboard/dashboard-views/dashboard-question/create-question/metadata-question/dialog-create-category/dialog-create-category.component.scss
@@ -29,3 +29,8 @@
     justify-content: space-between;
   }
 }
+.container-icon {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
