--- a/src/app/views/dashboard/dashboard-views/dashboard-question/create-question/metadata-question/dialog-create-category/dialog-create-category.component.html
+++ b/src/app/views/dashboard/dashboard-views/dashboard-question/create-question/metadata-question/dialog-create-category/dialog-create-category.component.html
@@ -7,14 +7,26 @@
         <mat-label>Nombre de categoría</mat-label>
         <input formControlName="category" name="category" type="text" matInput required />
         <mat-hint>Título para la nueva categoría.</mat-hint>
-        <mat-error *ngIf="form.controls['category'].errors?.['required']">
+        <mat-error
+          *ngIf="form.controls['category'].errors?.['required']  && form.controls['category'].dirty">
           Ingresá el nombre de una categoría nueva
         </mat-error>
       </mat-form-field>
-      <button mat-stroked-button color="primary" (click)="dialogSelectIconCategory()">
-        <mat-icon>add</mat-icon> Seleccionar ícono
+      <button mat-stroked-button color="primary" (click)="showSelectIconCategory()">
+        <ng-container *ngIf="nameIcon; else noIcon">
+          <div class="container-icon">
+            <mat-icon class="material-symbols-outlined" color="primary">{{ nameIcon }}</mat-icon>
+            <span>Icono Seleccionado</span>
+          </div>
+        </ng-container>
+        <ng-template class="container-icon" #noIcon
+          ><mat-icon>add</mat-icon> <span>Seleccionar ícono</span></ng-template
+        >
       </button>
     </div>
+    <ng-container *ngIf="showSelecIcon">
+      <bdc-bo-select-icon (selectIcon)="selectedIcon($event)"></bdc-bo-select-icon>
+    </ng-container>
     <mat-form-field appearance="outline">
       <mat-label>Agregar Subcategorías</mat-label>
       <mat-chip-grid #chipGrid formControlName="subcategories" name="subcategories">
