--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,6 +2,10 @@
 @import "./assets/sass/main.scss";
 @include mat.core();
 
+// .material-symbols-outlined {
+//   font-variation-settings: "FILL" 0, "wght" 400, "GRAD" 0, "opsz" 48;
+// }
+
 $md-paletteprimary: (
   50: #f1f6f6,
   100: #dce9e9,
