--- a/src/app/views/dashboard/dashboard-views/dashboard-question/create-question/metadata-question/dialog-create-category/dialog-create-category.component.scss
+++ b/src/app/views/dashboard/dashboard-views/dashboard-question/create-question/metadata-question/dialog-create-category/dialog-create-category.component.scss
@@ -34,3 +34,11 @@
   align-items: center;
   justify-content: space-around;
 }
+
+.center {
+  display: flex;
+  align-items: center;
+  // mat-icon {
+  // margin: 5px;
+  // }
+}
