select de icono y integracion de nueva categoria

--- a/src/app/views/dashboard/dashboard-views/dashboard-categories/dialog-select-icon/dialog-select-icon.component.html
+++ b/src/app/views/dashboard/dashboard-views/dashboard-categories/dialog-select-icon/dialog-select-icon.component.html
@@ -8,6 +8,8 @@
   <bdc-bo-select-icon (selectIcon)="selectedIcon($event)"></bdc-bo-select-icon>
   <div class="action">
     <button mat-stroked-button mat-dialog-close color="primary">Cancelar</button>
-    <button mat-flat-button color="primary">Seleccionar</button>
+    <button mat-flat-button mat-dialog-close color="primary" (click)="handleSelectIcon()">
+      Seleccionar
+    </button>
   </div>
 </div>
