--- a/src/app/views/dashboard/dashboard-views/dashboard-question/create-question/metadata-question/dialog-create-category/dialog-create-category.component.html
+++ b/src/app/views/dashboard/dashboard-views/dashboard-question/create-question/metadata-question/dialog-create-category/dialog-create-category.component.html
@@ -15,13 +15,16 @@
       <button class="center" mat-stroked-button color="primary" (click)="showSelectIconCategory()">
         <ng-container *ngIf="nameIcon; else noIcon">
           <div class="container-icon">
-            <mat-icon class="material-symbols-outlined" color="primary">{{ nameIcon }}</mat-icon>
             <span>Icono Seleccionado</span>
+            <mat-icon class="material-symbols-outlined" color="primary">{{ nameIcon }}</mat-icon>
           </div>
         </ng-container>
-        <ng-template class="container-icon" #noIcon
-          ><mat-icon>add</mat-icon> <span>Seleccionar ícono</span></ng-template
-        >
+        <ng-template #noIcon>
+          <div class="container-icon">
+            <mat-icon>add</mat-icon>
+            Seleccionar ícono
+          </div>
+        </ng-template>
       </button>
     </div>
     <ng-container *ngIf="showSelecIcon">
