--- a/src/app/views/dashboard/dashboard-views/dashboard-question/create-question/metadata-question/dialog-create-category/select-icon-category/select-icon-category.component.scss
+++ b/src/app/views/dashboard/dashboard-views/dashboard-question/create-question/metadata-question/dialog-create-category/select-icon-category/select-icon-category.component.scss
@@ -17,7 +17,7 @@
                 background-color: rgba(0, 0, 0, 0.04);
                 border-radius: 50%;
             }
-            .selected {
+            &.selected {
                 background-color: rgba(0, 0, 0, 0.04);
                 border-radius: 50%;
             }
