--- a/src/app/shared/empty-state/empty-state.component.html
+++ b/src/app/shared/empty-state/empty-state.component.html
@@ -1,5 +1,5 @@
 <div class="empty-state-content">
-  <mat-icon [svgIcon]="emptyStateData.icon"></mat-icon>
+  <img [src]="emptyStateData.icon" />
   <h3>{{ emptyStateData.title }}</h3>
   <p>{{ emptyStateData.paragraph }}</p>
 </div>
