--- a/src/app/views/dashboard/dashboard-views/dashboard-synonyms/table/table-synonyms.component.html
+++ b/src/app/views/dashboard/dashboard-views/dashboard-synonyms/table/table-synonyms.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="synonyms.data.lenght < 0; else noSynonyms">
+<div *ngIf="synonyms.data.lenght > 0; else noSynonyms">
   <div class="wrapper">
     <table mat-table [dataSource]="dataSource">
       <ng-container matColumnDef="position">
@@ -49,5 +49,30 @@
 </div>
 
 <ng-template #noSynonyms>
-  <bdc-bo-empty-state [emptyStateData]="emptyStateData"></bdc-bo-empty-state>
+  <div class="wrapper">
+    <table mat-table>
+      <ng-container matColumnDef="position">
+        <th width="30%" mat-header-cell *matHeaderCellDef>Origen</th>
+      </ng-container>
+      <ng-container matColumnDef="name">
+        <th mat-header-cell *matHeaderCellDef>Sinonimo(s)</th>
+      </ng-container>
+      <ng-container matColumnDef="seeMore">
+        <th mat-header-cell width="40px" *matHeaderCellDef></th>
+      </ng-container>
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+    </table>
+    <bdc-bo-empty-state [emptyStateData]="emptyStateData"></bdc-bo-empty-state>
+    <mat-paginator
+      [length]="10"
+      [pageIndex]="0"
+      [pageSize]="10"
+      [disabled]="false"
+      [hidePageSize]="true">
+    </mat-paginator>
+    <div class="overlay" *ngIf="areSynonymsLoading$ | async">
+      <mat-progress-spinner [color]="'primary'" [mode]="'indeterminate'"> </mat-progress-spinner>
+    </div>
+  </div>
 </ng-template>
