--- a/src/app/shared/empty-state/empty-state.component.scss
+++ b/src/app/shared/empty-state/empty-state.component.scss
@@ -6,7 +6,7 @@
   justify-content: center;
   padding: 50px;
 
-  mat-icon {
+  img {
     margin-bottom: 48px;
     width: 160px;
     height: 160px;
