--- a/src/app/views/dashboard/dashboard-views/dashboard-categories/table/table-categories.component.html
+++ b/src/app/views/dashboard/dashboard-views/dashboard-categories/table/table-categories.component.html
@@ -48,5 +48,30 @@
 </div>
 
 <ng-template #noCategories>
-  <bdc-bo-empty-state [emptyStateData]="emptyStateData"></bdc-bo-empty-state>
+  <div class="wrapper">
+    <table mat-table>
+      <ng-container matColumnDef="position">
+        <th width="30%" mat-header-cell *matHeaderCellDef>Categoría</th>
+      </ng-container>
+      <ng-container matColumnDef="name">
+        <th mat-header-cell *matHeaderCellDef>Subcategorías</th>
+      </ng-container>
+      <ng-container matColumnDef="seeMore">
+        <th mat-header-cell width="40px" *matHeaderCellDef></th>
+      </ng-container>
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+    </table>
+    <bdc-bo-empty-state [emptyStateData]="emptyStateData"></bdc-bo-empty-state>
+    <mat-paginator
+      [length]="categories.length"
+      [pageIndex]="0"
+      [pageSize]="10"
+      [disabled]="false"
+      [hidePageSize]="true">
+    </mat-paginator>
+    <div class="overlay" *ngIf="areCategoriesLoading$ | async">
+      <mat-progress-spinner [color]="'primary'" [mode]="'indeterminate'"> </mat-progress-spinner>
+    </div>
+  </div>
 </ng-template>
