ng if modificacion

--- a/src/app/views/dashboard/dashboard-views/dashboard-categories/table/table-categories.component.html
+++ b/src/app/views/dashboard/dashboard-views/dashboard-categories/table/table-categories.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="categories.data.length < 0; else noCategories">
+<div *ngIf="categories; else noCategories">
   <div class="wrapper">
     <table mat-table [dataSource]="dataSource">
       <ng-container matColumnDef="position">
