fix selected icon

--- a/src/app/views/dashboard/dashboard-views/dashboard-question/create-question/metadata-question/dialog-create-category/select-icon-category/select-icon-category.component.html
+++ b/src/app/views/dashboard/dashboard-views/dashboard-question/create-question/metadata-question/dialog-create-category/select-icon-category/select-icon-category.component.html
@@ -3,13 +3,15 @@
     <mat-expansion-panel (opened)="panelOpenState = true" (closed)="panelOpenState = false">
       <mat-expansion-panel-header>
         <mat-panel-title>Social</mat-panel-title>
-        <mat-panel-description></mat-panel-description>
       </mat-expansion-panel-header>
       <ng-container *ngFor="let icon of iconsSocial; let i = index">
-        <button
-          (click)="handleSelectIcon(icon, i, 'social')"
-          [ngClass]="{ selected: 'social' + '-' + i === selectedIconId }">
-          <mat-icon class="material-symbols-outlined" color="primary">{{ icon.name }}</mat-icon>
+        <button (click)="handleSelectIcon(icon, i, 'social')">
+          <mat-icon
+            [ngClass]="{ selected: 'social' + '-' + i === selectedIconId }"
+            class="material-symbols-outlined"
+            color="primary"
+            >{{ icon.name }}</mat-icon
+          >
         </button>
       </ng-container>
     </mat-expansion-panel>
@@ -17,13 +19,15 @@
     <mat-expansion-panel (opened)="panelOpenState = true" (closed)="panelOpenState = false">
       <mat-expansion-panel-header>
         <mat-panel-title> Negocios </mat-panel-title>
-        <mat-panel-description> </mat-panel-description>
       </mat-expansion-panel-header>
       <ng-container *ngFor="let icon of iconsBusiness; let i = index">
-        <button
-          (click)="handleSelectIcon(icon, i, 'business')"
-          [ngClass]="{ selected: 'business' + '-' + i === selectedIconId }">
-          <mat-icon class="material-symbols-outlined" color="primary">{{ icon.name }}</mat-icon>
+        <button (click)="handleSelectIcon(icon, i, 'business')">
+          <mat-icon
+            [ngClass]="{ selected: 'business' + '-' + i === selectedIconId }"
+            class="material-symbols-outlined"
+            color="primary"
+            >{{ icon.name }}</mat-icon
+          >
         </button>
       </ng-container>
     </mat-expansion-panel>
@@ -31,13 +35,15 @@
     <mat-expansion-panel (opened)="panelOpenState = true" (closed)="panelOpenState = false">
       <mat-expansion-panel-header>
         <mat-panel-title> Comunicaciones </mat-panel-title>
-        <mat-panel-description> </mat-panel-description>
       </mat-expansion-panel-header>
       <ng-container *ngFor="let icon of iconsAnnouncement; let i = index">
-        <button
-          (click)="handleSelectIcon(icon, i, 'announcement')"
-          [ngClass]="{ selected: 'announcement' + '-' + i === selectedIconId }">
-          <mat-icon class="material-symbols-outlined" color="primary">{{ icon.name }}</mat-icon>
+        <button (click)="handleSelectIcon(icon, i, 'announcement')">
+          <mat-icon
+            class="material-symbols-outlined"
+            [ngClass]="{ selected: 'announcement' + '-' + i === selectedIconId }"
+            color="primary">
+            {{ icon.name }}</mat-icon
+          >
         </button>
       </ng-container>
     </mat-expansion-panel>
