--- a/src/app/views/dashboard/dashboard-views/dashboard-users/table-users/table-users.component.html
+++ b/src/app/views/dashboard/dashboard-views/dashboard-users/table-users/table-users.component.html
@@ -3,25 +3,25 @@
     mat-table
     [dataSource]="dataSource"
     matSort
-    matSortActive="userName"
+    matSortActive="first_name"
     matSortDirection="asc"
     matSortDisableClear>
-    <ng-container matColumnDef="userName">
+    <ng-container matColumnDef="first_name">
       <th width="30%" mat-header-cell *matHeaderCellDef mat-sort-header>
         <span>Nombre y apellido</span>
       </th>
-      <td class="username" mat-cell *matCellDef="let element" class="username">
+      <td mat-cell *matCellDef="let element" class="username">
         {{ element.first_name }}
         {{ element.last_name }}
       </td>
     </ng-container>
-    <ng-container matColumnDef="userEmail">
+    <ng-container matColumnDef="email">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Email</th>
       <td mat-cell *matCellDef="let element">
         {{ element.email }}
       </td>
     </ng-container>
-    <ng-container matColumnDef="lastLogin">
+    <ng-container matColumnDef="last_login">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Último login</th>
       <td mat-cell *matCellDef="let element">
         {{ element.last_login | date: 'd MMM, y, h:mm' }}
@@ -31,7 +31,7 @@
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Clientes habilitados</th>
       <td mat-cell *matCellDef="let element"></td>
     </ng-container>
-    <ng-container matColumnDef="userRol">
+    <ng-container matColumnDef="role">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Rol</th>
       <td mat-cell *matCellDef="let element">
         {{ element.role }}
