--- a/src/app/views/dashboard/dashboard-views/dashboard-categories/table/table-categories.component.html
+++ b/src/app/views/dashboard/dashboard-views/dashboard-categories/table/table-categories.component.html
@@ -8,9 +8,11 @@
       <ng-container matColumnDef="name">
         <th mat-header-cell *matHeaderCellDef>Subcategorías</th>
         <td mat-cell *matCellDef="let element">
-          <bdc-bo-scroll-categories
-            *ngIf="element.subcategories"
-            [element]="element.subcategories"></bdc-bo-scroll-categories>
+          <ng-container *ngIf="element.subcategories.length > 0">
+            <bdc-bo-scroll-categories
+              *ngIf="element.subcategories"
+              [element]="element.subcategories"></bdc-bo-scroll-categories>
+          </ng-container>
         </td>
       </ng-container>
       <ng-container matColumnDef="seeMore">
