implementacion de ckeditor y traduccion de libreria, configuracion de inputs de fecha

--- a/src/app/views/dashboard/dashboard-views/dashboard-question/create-question/content/content.component.html
+++ b/src/app/views/dashboard/dashboard-views/dashboard-question/create-question/content/content.component.html
@@ -1,22 +1,19 @@
 <div class="wrapper">
-  <div>
-    <h5>Respuesta larga</h5>
-    <p>Ingresá el contenido para el artículo.</p>
-    <ckeditor [(ngModel)]="model.editorData" [editor]="Editor"></ckeditor>
-  </div>
-
-  <div>
-    <h5>Respuesta corta</h5>
-    <p>Ingresá un breve resumen del contenido.</p>
-    <ckeditor [editor]="Editor"></ckeditor>
-  </div>
-  <div>
-    <h5>Respuesta canal Aura</h5>
-    <p>Ingresá el contenido que aparecerá mediante canal Aura</p>
-    <ckeditor [editor]="Editor"></ckeditor>
-  </div>
+  <ng-container *ngFor="let createAnswer of createAnswers">
+    <div class="containerCreateAnswer">
+      <h5>{{ createAnswer.title }}</h5>
+      <p>{{ createAnswer.articleContent }}</p>
+      <ckeditor
+        [(ngModel)]="createAnswer.data"
+        [config]="editorConfig"
+        [editor]="Editor"></ckeditor>
+    </div>
+    <p>{{ createAnswer.data }}</p>
+  </ng-container>
   <div class="action">
     <button mat-stroked-button color="primary" matStepperPrevious>Volver atrás</button>
-    <button mat-flat-button color="primary" matStepperNext>Continuar</button>
+    <button mat-flat-button color="primary" (click)="obtenerValores()" matStepperNext>
+      Continuar
+    </button>
   </div>
 </div>
