update mat sort component functions and types

--- a/src/app/views/dashboard/dashboard-views/dashboard-users/table-users/table-users.component.html
+++ b/src/app/views/dashboard/dashboard-views/dashboard-users/table-users/table-users.component.html
@@ -28,7 +28,7 @@
       </td>
     </ng-container>
     <ng-container matColumnDef="userClients">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Clientes habilitados</th>
+      <th mat-header-cell *matHeaderCellDef>Clientes habilitados</th>
       <td mat-cell *matCellDef="let element"></td>
     </ng-container>
     <ng-container matColumnDef="role">
