--- a/src/app/views/dashboard/dashboard-views/dashboard-categories/detail-category/dashboard-detail-categories.component.html
+++ b/src/app/views/dashboard/dashboard-views/dashboard-categories/detail-category/dashboard-detail-categories.component.html
@@ -14,21 +14,26 @@
     </div>
 
     <h2>Subcategorías</h2>
-    <mat-accordion>
-      <mat-expansion-panel
-        *ngFor="let item of category.subcategories"
-        (opened)="panelOpenState = true"
-        (closed)="panelOpenState = false">
-        <mat-expansion-panel-header>
-          <mat-panel-title>
-            <div class="show-questions">1</div>
-            {{ item.name }}
-          </mat-panel-title>
-          <mat-panel-description> </mat-panel-description>
-        </mat-expansion-panel-header>
-        <p>preguntas asociadas</p>
-      </mat-expansion-panel>
-    </mat-accordion>
+    <ng-container *ngIf="category.subcategories.length > 0; else noSubcategories">
+      <mat-accordion>
+        <mat-expansion-panel
+          *ngFor="let item of category.subcategories"
+          (opened)="panelOpenState = true"
+          (closed)="panelOpenState = false">
+          <mat-expansion-panel-header>
+            <mat-panel-title>
+              <div class="show-questions">1</div>
+              {{ item.name }}
+            </mat-panel-title>
+            <mat-panel-description> </mat-panel-description>
+          </mat-expansion-panel-header>
+          <p>preguntas asociadas</p>
+        </mat-expansion-panel>
+      </mat-accordion>
+    </ng-container>
+    <ng-template #noSubcategories>
+      <bdc-bo-empty-state [emptyStateData]="emptyStateData"></bdc-bo-empty-state>
+    </ng-template>
 
     <ng-container *ngIf="areCategoriesLoading$ | async" class="overlay">
       <mat-progress-spinner [color]="'primary'" [mode]="'indeterminate'" [value]="50">
