--- a/src/app/views/dashboard/dashboard-views/dashboard-question/table/table-question.component.html
+++ b/src/app/views/dashboard/dashboard-views/dashboard-question/table/table-question.component.html
@@ -1,55 +1,95 @@
-<div class="wrapper">
-  <table mat-table [dataSource]="dataSource">
-    <ng-container matColumnDef="question">
-      <th mat-header-cell *matHeaderCellDef>Pregunta</th>
-      <td mat-cell *matCellDef="let element" class="text-blue">{{ element.name }}</td>
-    </ng-container>
-    <ng-container matColumnDef="category">
-      <th mat-header-cell *matHeaderCellDef>Categorías</th>
-      <td mat-cell *matCellDef="let element">
-        <ng-container *ngFor="let e of element.categories">
-          {{ e.name }}
-        </ng-container>
-      </td>
-    </ng-container>
-    <ng-container matColumnDef="subcategory">
-      <th mat-header-cell *matHeaderCellDef>Subcategorías</th>
-      <td mat-cell *matCellDef="let element">{{ element.subcategory }}</td>
-    </ng-container>
-    <ng-container matColumnDef="lastupdate">
-      <th mat-header-cell *matHeaderCellDef>Fecha de publicación</th>
-      <td mat-cell *matCellDef="let element">
-        {{ element.updated_at | date: 'MM/dd/yy h:mm' }} <br />
-        hasta
-        {{ element.published_at | date: 'MM/dd/yy h:mm' }}
-      </td>
-    </ng-container>
-    <ng-container matColumnDef="state">
-      <th mat-header-cell *matHeaderCellDef>Estado</th>
-      <td mat-cell *matCellDef="let element">
-        <bdc-bo-status-question [class]="element.status.code" [name]="element.status.name">
-        </bdc-bo-status-question></td
-    ></ng-container>
+<div *ngIf="questions.length > 0; else noQuestions">
+  <div class="wrapper">
+    <table mat-table [dataSource]="dataSource">
+      <ng-container matColumnDef="question">
+        <th mat-header-cell *matHeaderCellDef>Pregunta</th>
+        <td mat-cell *matCellDef="let element" class="text-blue">{{ element.name }}</td>
+      </ng-container>
+      <ng-container matColumnDef="category">
+        <th mat-header-cell *matHeaderCellDef>Categorías</th>
+        <td mat-cell *matCellDef="let element">
+          <ng-container *ngFor="let e of element.categories">
+            {{ e.name }}
+          </ng-container>
+        </td>
+      </ng-container>
+      <ng-container matColumnDef="subcategory">
+        <th mat-header-cell *matHeaderCellDef>Subcategorías</th>
+        <td mat-cell *matCellDef="let element">{{ element.subcategory }}</td>
+      </ng-container>
+      <ng-container matColumnDef="lastupdate">
+        <th mat-header-cell *matHeaderCellDef>Fecha de publicación</th>
+        <td mat-cell *matCellDef="let element">
+          {{ element.updated_at | date: 'MM/dd/yy h:mm' }} <br />
+          hasta
+          {{ element.published_at | date: 'MM/dd/yy h:mm' }}
+        </td>
+      </ng-container>
+      <ng-container matColumnDef="state">
+        <th mat-header-cell *matHeaderCellDef>Estado</th>
+        <td mat-cell *matCellDef="let element">
+          <bdc-bo-status-question [class]="element.status.code" [name]="element.status.name">
+          </bdc-bo-status-question></td
+      ></ng-container>
 
-    <ng-container matColumnDef="seeMore">
-      <th mat-header-cell width="40px" *matHeaderCellDef></th>
-      <td mat-cell *matCellDef="let element">
-        <bdc-bo-menu-question
-          [statusQuestion]="element.status.name"
-          [idQuestion]="element.id"></bdc-bo-menu-question>
-      </td>
-    </ng-container>
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-  </table>
-  <mat-paginator
-    (page)="handlePageChanged($event)"
-    [pageIndex]="pageIndex"
-    [disabled]="disabled"
-    [hidePageSize]="true">
-  </mat-paginator>
-  <div *ngIf="areQuestionsLoading$ | async" class="overlay">
-    <mat-progress-spinner [color]="'primary'" [mode]="'indeterminate'" [value]="50">
-    </mat-progress-spinner>
+      <ng-container matColumnDef="seeMore">
+        <th mat-header-cell width="40px" *matHeaderCellDef></th>
+        <td mat-cell *matCellDef="let element">
+          <bdc-bo-menu-question
+            [statusQuestion]="element.status.name"
+            [idQuestion]="element.id"></bdc-bo-menu-question>
+        </td>
+      </ng-container>
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+    </table>
+    <mat-paginator
+      (page)="handlePageChanged($event)"
+      [pageIndex]="pageIndex"
+      [disabled]="disabled"
+      [hidePageSize]="true">
+    </mat-paginator>
+    <div *ngIf="areQuestionsLoading$ | async" class="overlay">
+      <mat-progress-spinner [color]="'primary'" [mode]="'indeterminate'" [value]="50">
+      </mat-progress-spinner>
+    </div>
   </div>
 </div>
+
+<ng-template #noQuestions>
+  <div class="wrapper">
+    <table mat-table [dataSource]="dataSource">
+      <ng-container matColumnDef="question">
+        <th mat-header-cell *matHeaderCellDef>Pregunta</th>
+      </ng-container>
+      <ng-container matColumnDef="category">
+        <th mat-header-cell *matHeaderCellDef>Categorías</th>
+      </ng-container>
+      <ng-container matColumnDef="subcategory">
+        <th mat-header-cell *matHeaderCellDef>Subcategorías</th>
+      </ng-container>
+      <ng-container matColumnDef="lastupdate">
+        <th mat-header-cell *matHeaderCellDef>Fecha de publicación</th>
+      </ng-container>
+      <ng-container matColumnDef="state">
+        <th mat-header-cell *matHeaderCellDef>Estado</th>
+      </ng-container>
+      <ng-container matColumnDef="seeMore">
+        <th mat-header-cell width="40px" *matHeaderCellDef></th>
+      </ng-container>
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+    </table>
+    <bdc-bo-empty-state [emptyStateData]="emptyStateData"></bdc-bo-empty-state>
+    <mat-paginator
+      (page)="handlePageChanged($event)"
+      [pageIndex]="pageIndex"
+      [disabled]="disabled"
+      [hidePageSize]="true">
+    </mat-paginator>
+    <div *ngIf="areQuestionsLoading$ | async" class="overlay">
+      <mat-progress-spinner [color]="'primary'" [mode]="'indeterminate'" [value]="50">
+      </mat-progress-spinner>
+    </div>
+  </div>
+</ng-template>
