update back arrow

--- a/src/app/shared/back-arrow-button/back-arrow-button.component.html
+++ b/src/app/shared/back-arrow-button/back-arrow-button.component.html
@@ -1,3 +1,5 @@
-<button [routerLink]="['listado-de-preguntas']">
-  <mat-icon>arrow_back_ios_outlined</mat-icon>
+<!-- <button (click)="navigate()"> -->
+<!-- <button [routerLink]="finalUrl"> -->
+<button routerLink="..">
+  <mat-icon svgIcon="chevron-left"></mat-icon>
 </button>
