--- a/src/app/views/dashboard/dashboard-views/dashboard-categories/new-category/dashboard-new-category.component.scss
+++ b/src/app/views/dashboard/dashboard-views/dashboard-categories/new-category/dashboard-new-category.component.scss
@@ -1,8 +1,5 @@
 .wrapper {
   padding: 20px;
-  h3 {
-    margin-bottom: 80px;
-  }
   mat-form-field {
     width: 100%;
     color: #73777f;
@@ -30,5 +27,11 @@
   .action {
     display: flex;
     justify-content: space-between;
+  }
+  .header-box {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    margin-bottom: 80px;
   }
 }
