--- a/src/app/views/dashboard/dashboard-views/dashboard-question/dashboard-question.component.html
+++ b/src/app/views/dashboard/dashboard-views/dashboard-question/dashboard-question.component.html
@@ -1,3 +1,7 @@
+<section class="">
+  <bdc-bo-searcher (search)="handleSearch($event)"></bdc-bo-searcher>
+</section>
+
 <ng-container *ngIf="questions$ | async as questions">
   <div class="wrapper">
     <div class="question-action">
