--- a/src/app/views/dashboard/dashboard.component.scss
+++ b/src/app/views/dashboard/dashboard.component.scss
@@ -3,7 +3,7 @@
   grid-template-columns: min-content minmax(768px, 100%);
   grid-template-rows: 80px calc(100vh - 80px);
   grid-template-areas:
-    'aside header'
+    'aside main'
     'aside main';
 
   aside {
