add object to route backArrowButton

--- a/src/app/shared/back-arrow-button/back-arrow-button.component.html
+++ b/src/app/shared/back-arrow-button/back-arrow-button.component.html
@@ -1,5 +1,5 @@
 <!-- <button (click)="navigate()"> -->
 <!-- <button [routerLink]="finalUrl"> -->
-<button routerLink="..">
+<button [routerLink]="[routeMap.route]">
   <mat-icon svgIcon="chevron-left"></mat-icon>
 </button>
