--- a/src/app/views/dashboard/dashboard-views/dashboard-categories/detail-category/dashboard-detail-categories.component.html
+++ b/src/app/views/dashboard/dashboard-views/dashboard-categories/detail-category/dashboard-detail-categories.component.html
@@ -2,7 +2,7 @@
   <div class="wrapper">
     <div class="header">
       <div class="header__title">
-        <bdc-bo-back-arrow-button></bdc-bo-back-arrow-button>
+        <bdc-bo-back-arrow-button [routeMap]="backArrowObj"></bdc-bo-back-arrow-button>
         <h1>{{ category.name }}</h1>
       </div>
       <div class="action">
