--- a/src/app/shared/back-arrow-button/back-arrow-button.component.html
+++ b/src/app/shared/back-arrow-button/back-arrow-button.component.html
@@ -1,5 +1,3 @@
-<!-- <button (click)="navigate()"> -->
-<!-- <button [routerLink]="finalUrl"> -->
-<button [routerLink]="[routeMap.route]">
+<button [routerLink]="[routeMap]">
   <mat-icon svgIcon="chevron-left"></mat-icon>
 </button>
