--- a/src/app/views/dashboard/dashboard-views/dashboard-categories/new-category/dashboard-new-category.component.html
+++ b/src/app/views/dashboard/dashboard-views/dashboard-categories/new-category/dashboard-new-category.component.html
@@ -1,6 +1,6 @@
 <div class="wrapper">
   <div class="header-box">
-    <bdc-bo-back-arrow-button></bdc-bo-back-arrow-button>
+    <bdc-bo-back-arrow-button [routeMap]="'/dashboard/categorias'"></bdc-bo-back-arrow-button>
     <h3>Nueva categoría</h3>
   </div>
   <form [formGroup]="form">
