--- a/src/app/views/dashboard/dashboard-views/dashboard-question/create-question/dashboard-create-question.component.html
+++ b/src/app/views/dashboard/dashboard-views/dashboard-question/create-question/dashboard-create-question.component.html
@@ -1,5 +1,6 @@
 <div class="action">
-  <bdc-bo-back-arrow-button></bdc-bo-back-arrow-button>
+  <bdc-bo-back-arrow-button
+    [routeMap]="'/dashboard/listado-de-preguntas'"></bdc-bo-back-arrow-button>
   <h2>{{ title$ | async }}</h2>
 </div>
 <div class="wrapper">
