--- a/src/app/views/dashboard/dashboard-views/dashboard-synonyms/edit-synonyms/edit-synonyms.component.html
+++ b/src/app/views/dashboard/dashboard-views/dashboard-synonyms/edit-synonyms/edit-synonyms.component.html
@@ -1,7 +1,7 @@
 <ng-container *ngIf="synonymId$ | async as synonym">
   <div class="wrapper">
     <div class="action">
-      <bdc-bo-back-arrow-button></bdc-bo-back-arrow-button>
+      <bdc-bo-back-arrow-button [routeMap]="'/dashboard/sinonimos'"></bdc-bo-back-arrow-button>
       <h2>Editar Sinónimo de Negocio</h2>
     </div>
     <form [formGroup]="form" class="edit-synonyms-form">
