--- a/src/app/views/dashboard/dashboard-views/dashboard-users/create-user/create-user.component.html
+++ b/src/app/views/dashboard/dashboard-views/dashboard-users/create-user/create-user.component.html
@@ -80,7 +80,7 @@
     <div class="chip-area">
       <h3>Rol</h3>
       <div>
-        <mat-chip-listbox aria-label="Fish selection">
+        <mat-chip-listbox>
           <mat-chip-option color="primary" class="border-gray border-topleft-rad ml-8"
             >Administrador</mat-chip-option
           >
@@ -94,7 +94,7 @@
     <div class="chip-area">
       <h3>Estados</h3>
       <div>
-        <mat-chip-listbox aria-label="Fish selection">
+        <mat-chip-listbox>
           <mat-chip-option color="primary" class="border-gray border-topleft-rad ml-8"
             >Activo</mat-chip-option
           >
