--- a/src/app/views/dashboard/dashboard-views/dashboard-question/table/table-question.component.html
+++ b/src/app/views/dashboard/dashboard-views/dashboard-question/table/table-question.component.html
@@ -7,15 +7,13 @@
       </ng-container>
       <ng-container matColumnDef="category">
         <th mat-header-cell *matHeaderCellDef>Categorías</th>
-        <td mat-cell *matCellDef="let element">
-          <ng-container *ngFor="let e of element.categories">
-            {{ e.name }}
-          </ng-container>
+        <td class="text-center" mat-cell *matCellDef="let element">
+          {{ element.category.name }}
         </td>
       </ng-container>
       <ng-container matColumnDef="subcategory">
         <th mat-header-cell *matHeaderCellDef>Subcategorías</th>
-        <td mat-cell *matCellDef="let element">{{ element.subcategory }}</td>
+        <td mat-cell *matCellDef="let element">{{ element.sub_category }}</td>
       </ng-container>
       <ng-container matColumnDef="lastupdate">
         <th mat-header-cell *matHeaderCellDef>Fecha de publicación</th>
@@ -87,9 +85,5 @@
       [disabled]="disabled"
       [hidePageSize]="true">
     </mat-paginator>
-    <div *ngIf="areQuestionsLoading$ | async" class="overlay">
-      <mat-progress-spinner [color]="'primary'" [mode]="'indeterminate'" [value]="50">
-      </mat-progress-spinner>
-    </div>
   </div>
 </ng-template>
