--- a/src/app/views/dashboard/dashboard-views/dashboard-question/create-question/metadata-question/metadata-question.component.html
+++ b/src/app/views/dashboard/dashboard-views/dashboard-question/create-question/metadata-question/metadata-question.component.html
@@ -60,13 +60,22 @@
         </mat-select>
       </mat-form-field>
     </div>
+
     <mat-form-field appearance="outline">
       <mat-label>Preguntas Relacionadas</mat-label>
       <mat-hint> Otras preguntas vinculadas la pregunta creada.</mat-hint>
-      <mat-select formControlName="associatedQuestions" name="associatedQuestions" multiple>
-        <mat-option></mat-option>
-        <mat-select-trigger></mat-select-trigger>
-      </mat-select>
+      <input
+        type="text"
+        placeholder="Pick one"
+        aria-label="Number"
+        matInput
+        [formControl]="myControl"
+        [matAutocomplete]="auto" />
+      <mat-autocomplete autoActiveFirstOption #auto="matAutocomplete">
+        <mat-option  *ngFor="let option of filteredOptions | async" [value]="option">
+          {{ option }}
+        </mat-option>
+      </mat-autocomplete>
     </mat-form-field>
   </form>
   <div class="action">
