--- a/src/app/views/dashboard/dashboard-views/dashboard-users/table-users/table-users.component.html
+++ b/src/app/views/dashboard/dashboard-views/dashboard-users/table-users/table-users.component.html
@@ -1,51 +1,48 @@
-<div class="wrapper">
-  <table
-    mat-table
-    [dataSource]="dataSource"
-    matSort
-    matSortActive="userName"
-    matSortDirection="asc"
-    matSortDisableClear>
-    <ng-container matColumnDef="userName">
-      <th width="30%" mat-header-cell *matHeaderCellDef mat-sort-header>
-        <span>Nombre y apellido</span>
-      </th>
-      <td mat-cell *matCellDef="let element" class="username">
-        {{ element.userName }}
-      </td>
-    </ng-container>
-    <ng-container matColumnDef="userEmail">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Email</th>
-      <td mat-cell *matCellDef="let element">
-        {{ element.userEmail }}
-      </td>
-    </ng-container>
-    <ng-container matColumnDef="lastLogin">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Último login</th>
-      <td mat-cell *matCellDef="let element">
-        {{ element.lastLogin | date: 'd MMM, y, h:mm' }}
-      </td>
-    </ng-container>
-    <ng-container matColumnDef="userClients">
-      <th mat-header-cell *matHeaderCellDef>Clientes habilitados</th>
-      <td mat-cell *matCellDef="let element"></td>
-    </ng-container>
-    <ng-container matColumnDef="role">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Rol</th>
-      <td mat-cell *matCellDef="let element">
-        {{ element.role }}
-      </td>
-    </ng-container>
-    <ng-container matColumnDef="seeMore">
-      <th mat-header-cell width="40px" *matHeaderCellDef></th>
-      <td mat-cell *matCellDef="let element">
-        <div class="more-options">
-          <button [matMenuTriggerFor]="menu" mat-icon-button aria-label="más opciones">
-            <mat-icon>more_vert</mat-icon>
-          </button>
-          <mat-menu #menu="matMenu">
-            <button mat-menu-item>
-              <span>Eliminar</span>
+<ng-container *ngIf="users.length > 0; else noUsers">
+  <div class="wrapper">
+    <table
+      mat-table
+      [dataSource]="dataSource"
+      matSort
+      matSortActive="userName"
+      matSortDirection="asc"
+      matSortDisableClear>
+      <ng-container matColumnDef="userName">
+        <th width="30%" mat-header-cell *matHeaderCellDef mat-sort-header>
+          <span>Nombre y apellido</span>
+        </th>
+        <td mat-cell *matCellDef="let element" class="username">
+          {{ element.userName }}
+        </td>
+      </ng-container>
+      <ng-container matColumnDef="userEmail">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Email</th>
+        <td mat-cell *matCellDef="let element">
+          {{ element.userEmail }}
+        </td>
+      </ng-container>
+      <ng-container matColumnDef="lastLogin">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Último login</th>
+        <td mat-cell *matCellDef="let element">
+          {{ element.lastLogin | date: 'd MMM, y, h:mm' }}
+        </td>
+      </ng-container>
+      <ng-container matColumnDef="userClients">
+        <th mat-header-cell *matHeaderCellDef>Clientes habilitados</th>
+        <td mat-cell *matCellDef="let element"></td>
+      </ng-container>
+      <ng-container matColumnDef="role">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Rol</th>
+        <td mat-cell *matCellDef="let element">
+          {{ element.role }}
+        </td>
+      </ng-container>
+      <ng-container matColumnDef="seeMore">
+        <th mat-header-cell width="40px" *matHeaderCellDef></th>
+        <td mat-cell *matCellDef="let element">
+          <div class="more-options">
+            <button [matMenuTriggerFor]="menu" mat-icon-button aria-label="más opciones">
+              <mat-icon>more_vert</mat-icon>
             </button>
             <mat-menu #menu="matMenu">
               <button mat-menu-item>
@@ -68,8 +65,11 @@
       [disabled]="disabled"
       [hidePageSize]="true">
     </mat-paginator>
+    <div *ngIf="areUsersLoading$ | async" class="overlay">
+      <mat-progress-spinner [color]="'primary'" [mode]="'indeterminate'"> </mat-progress-spinner>
+    </div>
   </div>
-</div>
+</ng-container>
 
 <ng-template #noUsers>
   <div class="wrapper">
