--- a/src/app/views/dashboard/dashboard-views/dashboard-categories/table/scroll-categories/scroll-categories.component.scss
+++ b/src/app/views/dashboard/dashboard-views/dashboard-categories/table/scroll-categories/scroll-categories.component.scss
@@ -14,6 +14,7 @@
       border: 1px solid #a7abb3;
       span {
         color: #73777f;
+        font-size: 14px;
       }
       & button {
         opacity: 0;
