--- a/src/app/views/dashboard/dashboard-views/dashboard-synonyms/table/scroll-synonyms/scroll-synonyms.component.scss
+++ b/src/app/views/dashboard/dashboard-views/dashboard-synonyms/table/scroll-synonyms/scroll-synonyms.component.scss
@@ -13,6 +13,7 @@
       background-color: white;
       border: 1px solid #a7abb3;
       span {
+        font-size: 14px;
         color: #73777f;
       }
 
