--- a/src/app/views/dashboard/dashboard-views/dashboard-synonyms/new-synonym/new-synonym.component.html
+++ b/src/app/views/dashboard/dashboard-views/dashboard-synonyms/new-synonym/new-synonym.component.html
@@ -1,6 +1,6 @@
 <div class="wrapper">
   <div class="action">
-    <bdc-bo-back-arrow-button></bdc-bo-back-arrow-button>
+    <bdc-bo-back-arrow-button [routeMap]="'/dashboard/sinonimos'"></bdc-bo-back-arrow-button>
     <h1>Nuevo Sinónimo de Negocio</h1>
   </div>
   <form [formGroup]="form" class="edit-synonyms-form">
