edit icon delete on detail category

--- a/src/app/views/dashboard/dashboard-views/dashboard-categories/detail-category/dashboard-detail-categories.component.html
+++ b/src/app/views/dashboard/dashboard-views/dashboard-categories/detail-category/dashboard-detail-categories.component.html
@@ -7,7 +7,7 @@
       </div>
       <div class="action">
         <button mat-stroked-button color="primary" (click)="deleteCategory(category.id)">
-          <mat-icon class="mat-icon-outlined">class</mat-icon> Archivar
+          <mat-icon class="material-symbols-outlined">delete</mat-icon>Eliminar
         </button>
         <button mat-flat-button color="primary">Editar nombre</button>
       </div>
