--- a/src/app/views/dashboard/dashboard-views/dashboard-question/dashboard-question.component.html
+++ b/src/app/views/dashboard/dashboard-views/dashboard-question/dashboard-question.component.html
@@ -6,6 +6,7 @@
   <div class="wrapper">
     <div class="question-action">
       <h1>Preguntas</h1>
+
       <nav mat-tab-nav-bar [tabPanel]="tabPanel" [color]="'accent'">
         <a
           mat-tab-link
@@ -15,6 +16,7 @@
           {{ tab.label }}
         </a>
       </nav>
+
       <div class="action">
         <div class="menu">
           <button mat-stroked-button color="primary" (click)="toggleMenu()">
@@ -32,7 +34,15 @@
         </button>
       </div>
     </div>
+
     <mat-tab-nav-panel #tabPanel>
+      <bdc-bo-tabla-question
+        (pageChanged)="handlePageChanged($event)"
+        [questions]="questions"></bdc-bo-tabla-question>
+
+      <bdc-bo-tabla-question
+        (pageChanged)="handlePageChanged($event)"
+        [questions]="questions"></bdc-bo-tabla-question>
       <bdc-bo-tabla-question
         (pageChanged)="handlePageChanged($event)"
         [questions]="questions"></bdc-bo-tabla-question>
