--- a/src/app/views/dashboard/dashboard-views/dashboard-question/create-question/content/content.component.scss
+++ b/src/app/views/dashboard/dashboard-views/dashboard-question/create-question/content/content.component.scss
@@ -1,6 +1,9 @@
 .wrapper {
   padding-top: 60px;
-  .containerCreateAnswer {
+  mat-form-field{
+    width: 100%;
+  }
+  .container-create-answer {
     padding-bottom: 50px;
     h5 {
       font-size: 16px;
