--- a/src/app/views/dashboard/dashboard-views/dashboard-question/create-question/dashboard-create-question.component.html
+++ b/src/app/views/dashboard/dashboard-views/dashboard-question/create-question/dashboard-create-question.component.html
@@ -1,6 +1,8 @@
 <div class="action">
+  <button (click)="unsavedChanges()">hola</button>
   <bdc-bo-back-arrow-button
-    [routeMap]="'/dashboard/listado-de-preguntas'"></bdc-bo-back-arrow-button>
+    [routeMap]="'/dashboard/listado-de-preguntas'"
+    (click)="unsavedChanges()"></bdc-bo-back-arrow-button>
   <h2>{{ title$ | async }}</h2>
 </div>
 <div class="wrapper">
